fix: enable disable chat visibility:

--- a/src/styles/wos-helper.css
+++ b/src/styles/wos-helper.css
@@ -119,6 +119,7 @@ button {
 }
 
 .twitch-chat-frame {
+  display: none;
   grid-column: 3;
   grid-row: span 2;
 }
